--- a/app/src/main/res/layout/welcome_act.xml
+++ b/app/src/main/res/layout/welcome_act.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent">
     <ImageView
         android:id="@+id/view_img"
-        android:src="@drawable/star_logo"
+        android:src="@mipmap/boot_page"
+        android:scaleType="fitXY"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
