--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -37,5 +37,191 @@
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:backgroundDimEnabled">false</item>
     </style>
+    <!-- 文本样式 -->
+    <style name="text">
+        <item name="android:textSize">@dimen/textNormal</item>
+        <item name="android:textColor">@color/text_noraml</item>
+    </style>
+
+    <style name="text.Small">
+        <item name="android:textSize">@dimen/textSmall</item>
+        <item name="android:textColor">@color/text_noraml</item>
+    </style>
+
+    <style name="text.SmallVery">
+        <item name="android:textSize">@dimen/textLittle</item>
+        <item name="android:textColor">@color/text_noraml</item>
+    </style>
+
+    <style name="text.Middle">
+        <item name="android:textSize">@dimen/textMiddle</item>
+        <item name="android:textColor">@color/text_noraml</item>
+    </style>
+
+    <style name="text.Large">
+        <item name="android:textSize">@dimen/textLarge</item>
+        <item name="android:textColor">@color/text_noraml</item>
+    </style>
+
+    <style name="textBlack">
+        <item name="android:textSize">@dimen/textNormal</item>
+        <item name="android:textColor">@color/text_black</item>
+    </style>
+
+    <style name="textBlack.Small">
+        <item name="android:textSize">@dimen/textSmall</item>
+        <item name="android:textColor">@color/text_black</item>
+    </style>
+
+    <style name="textBlack.SmallVery">
+        <item name="android:textSize">@dimen/textLittle</item>
+        <item name="android:textColor">@color/text_black</item>
+    </style>
+
+    <style name="textBlack.Middle">
+        <item name="android:textSize">@dimen/textMiddle</item>
+        <item name="android:textColor">@color/text_black</item>
+    </style>
+
+    <style name="textBlack.Large">
+        <item name="android:textSize">@dimen/textLarge</item>
+        <item name="android:textColor">@color/text_black</item>
+    </style>
+
+    <style name="textSub">
+        <item name="android:textSize">@dimen/textNormal</item>
+        <item name="android:textColor">@color/text_sub</item>
+    </style>
+
+    <style name="textSub.Small">
+        <item name="android:textSize">@dimen/textSmall</item>
+        <item name="android:textColor">@color/text_sub</item>
+    </style>
+
+    <style name="textSub.SmallVery">
+        <item name="android:textSize">@dimen/textLittle</item>
+        <item name="android:textColor">@color/text_sub</item>
+    </style>
+
+    <style name="textSub.Middle">
+        <item name="android:textSize">@dimen/textMiddle</item>
+        <item name="android:textColor">@color/text_sub</item>
+    </style>
+
+    <style name="textSub.Large">
+        <item name="android:textSize">@dimen/textLarge</item>
+        <item name="android:textColor">@color/text_sub</item>
+    </style>
+
+    <style name="textLable">
+        <item name="android:textSize">@dimen/textNormal</item>
+        <item name="android:textColor">@color/text_lable</item>
+    </style>
+
+    <style name="textLable.Small">
+        <item name="android:textSize">@dimen/textSmall</item>
+        <item name="android:textColor">@color/text_lable</item>
+    </style>
+
+    <style name="textLable.SmallVery">
+        <item name="android:textSize">@dimen/textLittle</item>
+        <item name="android:textColor">@color/text_lable</item>
+    </style>
+
+    <style name="textLable.Middle">
+        <item name="android:textSize">@dimen/textMiddle</item>
+        <item name="android:textColor">@color/text_lable</item>
+    </style>
+
+    <style name="textLable.Large">
+        <item name="android:textSize">@dimen/textLarge</item>
+        <item name="android:textColor">@color/text_lable</item>
+    </style>
+
+    <style name="textFocus">
+        <item name="android:textSize">@dimen/textNormal</item>
+        <item name="android:textColor">@color/text_focus</item>
+    </style>
+
+    <style name="textFocus.Small">
+        <item name="android:textSize">@dimen/textSmall</item>
+        <item name="android:textColor">@color/text_focus</item>
+    </style>
+
+    <style name="textFocus.SmallVery">
+        <item name="android:textSize">@dimen/textLittle</item>
+        <item name="android:textColor">@color/text_focus</item>
+    </style>
+
+    <style name="textFocus.Middle">
+        <item name="android:textSize">@dimen/textMiddle</item>
+        <item name="android:textColor">@color/text_focus</item>
+    </style>
+
+    <style name="textFocus.Large">
+        <item name="android:textSize">@dimen/textLarge</item>
+        <item name="android:textColor">@color/text_focus</item>
+    </style>
+
+    <style name="textWhite">
+        <item name="android:textSize">@dimen/textNormal</item>
+        <item name="android:textColor">@color/text_white</item>
+    </style>
+
+    <style name="textWhite.Small">
+        <item name="android:textSize">@dimen/textSmall</item>
+        <item name="android:textColor">@color/text_white</item>
+    </style>
+
+    <style name="textWhite.SmallVery">
+        <item name="android:textSize">@dimen/textLittle</item>
+        <item name="android:textColor">@color/text_white</item>
+    </style>
+
+    <style name="textWhite.Middle">
+        <item name="android:textSize">@dimen/textMiddle</item>
+        <item name="android:textColor">@color/text_white</item>
+    </style>
+
+    <style name="textWhite.Large">
+        <item name="android:textSize">@dimen/textLarge</item>
+        <item name="android:textColor">@color/text_white</item>
+    </style>
+    <!-- 分割线颜色 -->
+    <style name="lineStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/common_line_size</item>
+        <item name="android:background">@color/common_line_little</item>
+    </style>
+
+    <style name="lineStyle.Vertical">
+        <item name="android:layout_width">@dimen/common_line_size</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:background">@color/common_line_little</item>
+    </style>
+
+    <style name="lineStyle.DARK">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/common_line_size</item>
+        <item name="android:background">@color/common_line_drak</item>
+    </style>
+
+    <style name="lineStyle.DARK.Vertical">
+        <item name="android:layout_width">@dimen/common_line_size</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:background">@color/common_line_drak</item>
+    </style>
+
+    <style name="lineStyle.FOCUS">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/common_linefocus_size</item>
+        <item name="android:background">@color/text_focus</item>
+    </style>
+
+    <style name="lineStyle.FOCUS.Vertical">
+        <item name="android:layout_width">@dimen/common_linefocus_size</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:background">@color/text_focus</item>
+    </style>
 
 </resources>
