--- a/baseappresource/src/main/res/layout/common_dialog_load.xml
+++ b/baseappresource/src/main/res/layout/common_dialog_load.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@drawable/popup_single"
+        android:background="@color/AllTransparent"
         android:gravity="center"
         android:orientation="vertical" >
 
