--- a/baseappresource/src/main/res/layout/common_dialog_progress.xml
+++ b/baseappresource/src/main/res/layout/common_dialog_progress.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@drawable/popup_single"
+        android:background="@color/AllTransparent"
         android:gravity="center"
         android:orientation="vertical"
         android:paddingBottom="@dimen/dpx010"
